--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,12 @@
     </modules>
 
     <properties>
+        <java.version>1.8</java.version>
         <lombok.version>1.18.20</lombok.version>
+        <maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
+
+        <!-- Test Dependencies-->
+        <junit.version>4.13</junit.version>
     </properties>
 
     <dependencyManagement>
@@ -24,7 +29,26 @@
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
             </dependency>
+
+            <!-- Test Dependencies-->
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>com.github.codingandcoding</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven-compiler-plugin.version}</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
