Adding the structure for the new module responsible for reading the send request from csv files

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>open-batch-mailer-core</module>
+        <module>open-batch-mailer-csv-request-reader</module>
     </modules>
 
     <properties>
